  occurs when computing the partition point. (Ignacio Vera)

* LUCENE-10644: Facets#getAllChildren testing should ignore child order. (Yuting Gan)

* LUCENE-10665, GITHUB#11701: Fix classloading deadlock in analysis factories / AnalysisSPILoader
  initialization.  (Uwe Schindler)

* LUCENE-10674: Ensure BitSetConjDISI returns NO_MORE_DOCS when sub-iterator exhausts. (Jack Mazanec)

Build
---------------------

* GITHUB#11720: Upgrade randomizedtesting to 2.8.1 (potential fix for odd wall clock - related 
  timeout failures). (Dawid Weiss)

* LUCENE-10669: The build should be more helpful when generated resources are touched (Dawid Weiss)

Other
---------------------
* LUCENE-10559: Add Prefilter Option to KnnGraphTester (Kaival Parikh)

======================== Lucene 9.3.0 =======================

API Changes
---------------------

* LUCENE-10603: SortedSetDocValues#NO_MORE_ORDS marked @deprecated in favor of iterating with
  SortedSetDocValues#docValueCount(). (Greg Miller)

* GITHUB#978: Deprecate (remove in Lucene 10) obsolete constants in oal.util.Constants; remove
  code which is no longer executed after Java 9. (Uwe Schindler)

New Features
---------------------
* LUCENE-10550: Add getAllChildren functionality to facets (Yuting Gan)

* LUCENE-10274: Added facetsets module for high dimensional (hyper-rectangle) faceting
(Shai Erera, Marc D'Mello, Greg Miller)

* LUCENE-10151 Enable timeout support in IndexSearcher. (Deepika Sharma)

Improvements
---------------------

* LUCENE-10078: Merge on full flush is now enabled by default with a timeout of
  500ms. (Adrien Grand)

* LUCENE-10585: Facet module code cleanup (copy/paste scrubbing, simplification and some very minor
  optimization tweaks). (Greg Miller)

* LUCENE-10603: Update SortedSetDocValues iteration to use SortedSetDocValues#docValueCount().
  (Greg Miller, Stefan Vodita)


* LUCENE-10619: Optimize the writeBytes in TermsHashPerField. (Tang Donghai)
